@@ -1,20 +1,19 @@
 Package: fscaret
 Type: Package
 Title: Automated caret feature selection
-Version: 0.8.5.3
-Date: 2013-06-30
+Version: 0.8.5.4
+Date: 2014-02-23
 Depends: R (>= 3.0.0), caret, gsubfn, utils, parallel
-Suggests: ada, affy, arm, Boruta, bst, C50, car, caTools, class,
-        Cubist, e1071, earth (>= 2.2-3), elasticnet, ellipse, evtree,
+Suggests: ada, arm, Boruta, bst, C50, car, caTools, class, Cubist,
+        e1071, earth (>= 2.2-3), elasticnet, ellipse, evtree,
         extraTrees, fastICA, foba, gam, gbm (>= 2.1), glmnet (>= 1.8),
-        gpls, grid, hda, HDclassif, HiDimDA, Hmisc, ipred, kernlab,
-        kknn, klaR, kohonen, KRLS, lars, leaps, LogicForest, logicFS,
-        LogicReg, MASS, mboost, mda, mgcv, mlbench, neuralnet, nnet,
-        nodeHarvest, obliqueRF, pamr, partDSA, party (>= 0.9-99992),
-        penalized, penalizedLDA, pls, pROC, proxy, qrnn,
-        quantregForest, randomForest, RANN, relaxo, rFerns, rocc,
-        rpart, rrcov, RRF, rrlda, RSNNS, RWeka (>= 0.4-1), sda, SDDA,
-        sparseLDA (>= 0.1-1), spls, stepPlr,superpc, vbmp
+        grid, hda, HDclassif, HiDimDA, Hmisc, ipred, kernlab, kknn,
+        klaR, kohonen, KRLS, lars, leaps, LogicReg, MASS, mboost, mda,
+        mgcv, mlbench, neuralnet, nnet, nodeHarvest, obliqueRF, pamr,
+        partDSA, party (>= 0.9-99992), penalized, penalizedLDA, pls,
+        pROC, proxy, qrnn, quantregForest, randomForest, RANN, relaxo,
+        rFerns, rocc, rpart, rrcov, RRF, rrlda, RSNNS, RWeka (>=
+        0.4-1), sda, SDDA, sparseLDA (>= 0.1-1), spls, stepPlr,superpc
 Author: Jakub Szlek <j.szlek@uj.edu.pl>, acknowledgments to Aleksander
         Mendyk, contributions from stackoverflow and
         r-help@r-project.org mailing list community.
@@ -22,7 +21,7 @@ Maintainer: Jakub Szlek <j.szlek@uj.edu.pl>
 License: GPL-2 | GPL-3
 Description: Automated feature selection using variety of models
         provided by caret package
-Packaged: 2013-06-30 21:17:56 UTC; kuba
+Packaged: 2014-02-26 08:26:24 UTC; kuba
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-07-01 07:16:01
+Date/Publication: 2014-02-26 17:18:18
