@@ -1,36 +1,38 @@
-7f08a95d17caa9ff6fe70c3caaf37455 *DESCRIPTION
+917ea3559e7ac12d3b57da79d10bcce2 *DESCRIPTION
 029ad9654316da7b0986a61543e2f39a *NAMESPACE
 6a4372bcb4b3d0e283b6bfd07feaac0b *R/MSE.R
 fad361e51e4e126ae1bd160e26be1003 *R/RMSE.R
 bf25b73d80971e0dfd6f4b075e896f99 *R/dataPreprocess.R
-38bf61a8f367cb59bfa9f2856d74e594 *R/fscaret.R
+7550f0269aa8f4cdbaea4430a1d11eba *R/fscaret.R
 288383c67f842747dda497afe0a9b9ed *R/funcReg.all.R
 6ef4f573e217238f58879693564edef2 *R/impCalc.R
 2afa4ec13630ff492d5f6456f744b3c9 *R/imputeMean.R
 e83d0af82349f78dc4436942258eba0b *R/installPckg.R
-ba90aa15f87daf2105e9ca51d33c6ac5 *R/regVarImp.R
+e6ace5551d127c062c50afc49c0814a0 *R/regVarImp.R
 75bb37c88645180e6c78729e53cc297f *R/requiredPackages.R
 74838300c0e161348e60854d9f1afc2a *R/timeout.R
+cdcc5aad54bedca04b93213f8a0301e0 *build/vignette.rds
 fa747f3111587c646da994f25dbfdc5d *data/dataset.test.RData
 0c4b9635e54b833158c8e9695cb05c29 *data/dataset.train.RData
 9039067f19f024c91547ab52e0e404a8 *data/funcRegPred.RData
 73a4360a6e7a310dbf1ce90986f2e876 *data/requiredPackages.RData
-deeebd31ab29514552efa614fc59fab3 *inst/NEWS.Rd
-8b4f42577322b5daea282267f2738dce *inst/doc/fscaret.R
-95fd8ee1f4297d2c80c91c9f08dd4b9f *inst/doc/fscaret.Rnw
-4c0e83931ec73f48b5bff71778ee96e0 *inst/doc/fscaret.pdf
+a92882a9483305d31da69c7e87077972 *inst/CITATION
+cb2d4406f48315cd9202e8aeec179d3c *inst/NEWS.Rd
+cfc08613410d488da748cdf7e627e2a8 *inst/doc/fscaret.R
+458079da85a8280f3a4ee0e1d7f1b780 *inst/doc/fscaret.Rnw
+f8b48000d883ac8e99731b4abc217baa *inst/doc/fscaret.pdf
 f760f432af5b2aaa5902ef8e11659ca1 *man/MSE.Rd
 d768fe4bd6b787ec63f0b137c4e31d80 *man/RMSE.Rd
 b98457a3d4e331f2ba13bc32e6d6247d *man/dataPreprocess.Rd
 76d760fcbe688794d3e390bbcfe1954a *man/dataset.test.Rd
 3e07c5e6343bfeeb699f163646b784f6 *man/dataset.train.Rd
-bd8e0b97d04a8dbbce0f11387401546d *man/fscaret-package.Rd
+46b0b2a54416cf04f2991a60992ed4cc *man/fscaret-package.Rd
 6238e52441ad72c2149d572a3a06e0e7 *man/fscaret.Rd
 e19c6b333eb5c191325efedb287b4cfa *man/funcReg.all.Rd
-76e4c36cde86fe076b9e295ffee2eb3f *man/impCalc.Rd
+58f5ab1f45a2e43c3e543e2395072bf2 *man/impCalc.Rd
 5dbf4ece4a03ac37f891cf56684be8d1 *man/imputeMean.Rd
 3ef75a5d12c1a84c1eb450da41232998 *man/installPckg.Rd
-316c74c28db3c884618569f947a74764 *man/regVarImp.Rd
+f03410cf2f3cf9b56a50c7dbea4439ab *man/regVarImp.Rd
 315637019cc8dd12e296363887b7bb91 *man/requiredPackages.Rd
 e2a93466d9ed492a60d8616116d50fa2 *man/timeout.Rd
-95fd8ee1f4297d2c80c91c9f08dd4b9f *vignettes/fscaret.Rnw
+458079da85a8280f3a4ee0e1d7f1b780 *vignettes/fscaret.Rnw
