@@ -1,0 +1,21 @@
+citHeader("To cite package 'fscaret' in publications use:")
+citEntry(entry = "article",
+title = "Heuristic modeling of macromolecule release from PLGA microspheres.",
+author = personList(as.person("Szlek Jakub"),
+as.person("Paclawski Adam"),
+as.person("Lau Raymond"),
+as.person("Jachowicz Renata"),
+as.person("Mendyk Aleksander")),
+year = "2013",
+note = "R package version 0.8.5.3",
+journal = "International Journal of Nanomedicine",
+volume="8",
+number = "1",
+pages = "4601-4611",
+textVersion =
+paste0("Szlek Jakub, Paclawski Adam, Lau Raymond,Jachowicz Renata",
+" and Mendyk Aleksander (",
+"2013",
+"). Heuristic modeling of macromolecule release from PLGA microspheres. ", "International Journal of Nanomedicine,
+2013:8(1), 4601-4611.",
+"R package version 0.8.5.3", "."))
